@@ -68,7 +68,7 @@ changeset: 372:revision-b
     calls = iter(x[1][0] for x in remote_core.cmd.mock_calls)
     assert calls.next() == 'hg init {}'.format(remote_core.target_directory)
     assert calls.next() == 'hg id -i'
-    assert calls.next() == 'LANG=C hg heads'
+    assert calls.next() == 'LANG=C LC_ALL=C LANGUAGE=C hg heads'
     assert calls.next() == 'hg -y unbundle batou-bundle.hg'
     assert calls.next() == 'hg up -C default'
     assert calls.next() == 'hg id -i'
